# se-toolkit-hackaton

./: .dockerignore  .env.bot.example  .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  package-lock.json  presentation.tex  pyproject.toml  test_qwen_api.py
.qwen/: settings.json
backend/: Dockerfile  pyproject.toml
backend/app/: llm_client.py  main.py  translate.py
backend/tests/: test_translate.py
bot/: Dockerfile  bot.py  config.py  pyproject.toml
bot/handlers/: commands.py
bot/services/: llm_client.py
bot/wheels/: aiogram-3.27.0-py3-none-any.whl
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx
