[project]
name = "formalator-backend"
version = "0.1.0"
description = "FastAPI backend for formal-to-informal text translation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pyright>=1.1.408",
    "ruff>=0.14.0",
]
