[project]
name = "formalator-bot"
version = "0.1.0"
description = "Telegram bot for formal-to-informal text translation"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
